# git-memory

./: .coverage  .gitignore  CLAUDE.md  LICENSE  PROJECT.md  TODO.md  pyproject.toml  run_tests.py
.history/: history.md  memory.md  structure.mmd
.history/0bb7bda6e02fe0153508ff99c73d22363ec18582/: diff.patch  memory.md  structure.mmd
.history/3801f296df75153a75cc627c9ecf7ac32d809d13/: diff.patch  memory.md  structure.mmd
.history/58a15e6aff29fbcb87895f0fdf8418979ee7182b/: diff.patch  memory.md  structure.mmd
.history/6457126c038753988619e5f58d63ffa81859c57b/: diff.patch  memory.md  structure.mmd
.history/75a7b58bceb30119467320a56c79f2835feccf22/: diff.patch
.history/8c7abc5115b5118ca242351ff015fdc4dbfe7d35/: diff.patch  memory.md  structure.mmd
.history/a1a2ed0528b0560e92b53c4fece80ca651406bb6/: diff.patch  memory.md  structure.mmd
.history/b9e00ddf44c661bf7beab97cf50c7836042be169/: diff.patch  memory.md  structure.mmd
.history/e887cb601ccc364a65899ac01f5c6624d0e44a3b/: diff.patch  memory.md  structure.mmd
git_memory/: __init__.py  __main__.py  ai.py  config.py  history.py  structure.py
git_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
prompts/: aggregation_prompt.md  diagram_prompt.md  memory_prompt.md  system.md
tests/: __init__.py  conftest.py  test_ai.py  test_config.py  test_history.py  test_integration.py  test_main.py
